--- a/doc/analytic_part.tex
+++ b/doc/analytic_part.tex
@@ -45,7 +45,7 @@
 
 Алгоритм основывается на хранении глубины (z-значения) каждого пикселя экрана и определении ближайшей к экрану точки при разложении многоугольников в растр.
 Главное преимущество алгоритма -- его простота. Кроме того, этот алгоритм решает задачу об удалении невидимых поверхностей и делает тривиальной визуализацию пересечений сложных поверхностей -- сцены могут быть любой сложности.
-Основной недостаток алгоритма -- большой объем требуемой памяти~\cite{lit1}.
+Основной недостаток алгоритма -- большой объем требуемой памяти~\cite{lit1}. Также алгоритм требует модификаций и доработок для задач с отражениями, потому что он работает только с глубиной объектов для каждого пикселя экрана без учета траектории распространения отраженного света.
 
 
 \subsection{Алгоритм обратной трассировки лучей}
@@ -88,7 +88,7 @@
 В рамках данного алгоритма также вводится понятие фокальной точки, задающейся фиксированным расстоянием от камеры по вектору направления взгляда для каждого пикселя кадра. Таким образом, модифицированный трассируемый луч, начало которого задается с помощью случайной точки круга заданного радиуса, направляется к фокальной точке~\cite{DOF}.
 
 
-\subsection*{Вывод}
+\section*{Вывод}
 
 В данном разделе были рассмотрены основные методы построения реалистичных изображений. Для удаления невидимых ребер, учета отражения света и теней, а также симуляции эффекта глубины поля в данной работе был выбран алгоритм обратной трассировки лучей в силу своей универсальности и реалистичности результата.
 
