--- a/doc/conclusion.tex
+++ b/doc/conclusion.tex
@@ -4,9 +4,10 @@
 
 В ходе работы были решены все поставленные задачи:
 \begin{itemize}
-	\item рассмотрены основные алгоритмы удаления невидимых линий и поверхностей, методы закраски, методы построения теней. На основании их анализа были выбраны алгоритмы и методы, наиболее подходящие для решения поставленной задачи;
-	\item была проведена декомпозиция задачи, разработаны диаграммы функционального моделирования и схемы реализуемых алгоритмов;
-	\item спроектированное ПО было реализовано выбранными средствами;
+	\item рассмотрены основные алгоритмы удаления невидимых линий и поверхностей, методы закраски, методы построения теней. На основании их анализа были выбраны алгоритмы и методы, наиболее подходящие для решения поставленной задачи: в качестве алгоритма удаления невидимых линий и поверхностей был выбран алгоритм трассировки лучей в силу своей универсальности и реалистичности результата, в качестве метода закраски был выбран метод Фонга, для построения теней был выбран метод теста теневым лучом;
+	\item была проведена декомпозиция задачи с помощью диаграмм функционального моделирования IDEF0, были разработаны схемы реализуемых алгоритмов визуализации сцены объектов методом трассировки лучей;
+	\item спроектированное ПО было реализовано с помощью выбранных языка программирования C\# и среды разработки Microsoft Visual Studio;
 	\item было проведено исследование временной эффективности реализованного ПО.
 \end{itemize}
 
+В результате исследования было выявлено оптимальное число потоков для многопоточной обработки, а также был установлен рост времени визуализации трехмерной сцены при увеличении числа объектов на ней.
