--- a/doc/coursework.tex
+++ b/doc/coursework.tex
@@ -16,5 +16,5 @@
 	
 	\def\bibname{\begin{center}\Large СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ\end{center}}
 	\include{links}
-	\include{appendixA}
+	\include{appendixes}
 \end{document}
