--- a/doc/analytic_part.tex
+++ b/doc/analytic_part.tex
@@ -33,6 +33,22 @@
 \end{equation}
 где $d$ -- расстояние до источника освещения, $K$ -- произвольная константа.
 
+\section{Модели представления объектов}
+Существует пять основных методов представления объектов: аналитический, полигональный, воксельный, с помощью равномерной сетки и с помощью неравномерной сетки.
+
+В рамках аналитически заданной модели объект описывается с помощью математических формул. В силу этого метод не подходит для описания произвольного объекта, однако для таких гладких поверхностей, как сфера, тор, цилиндры позволяет их точно, без погрешностей, представить. При этом поиск пересечения с другими простейшими объектами, например, лучом, выполняется за $O(1)$.
+
+Полигональная сетка представляет собой совокупность связанных между собой многоугольников (чаще всего, треугольников), аппроксимирующих заданную поверхность. Так, любой объект можно представить с необходимой степенью детализации. Однако для данного способа задания объектов поиск пересечения с другими объектами выполняется за $O(n)$ операций, где $n$ -- число полигонов, из которых состоит объект.
+
+Воксельная модель описывается как трехмерный массив вокселей, малых кубических элементов, для которых фиксируются параметры объекта в соответствующих ячейках объема (например, цвет). Метод подходит для описания произвольных объектов, однако пространственная сложность метода -- $O(n^3)$, где $n$ -- число ячеек в каждом измерении кубической сетки.
+
+Эта модель описывает координаты отдельных точек поверхности следующим образом: к каждому узлу сетки с индексами $i, j$ приписывается значение высоты $z_\text{ij}$, при этом расстояние между узлами является равным по осям $Ox$ и $Oy$. Не каждая поверхность может быть представлена этой моделью. Если в каж­дом узле записывается только одно значение высоты, то это означает, что поверхность описывается однозначной функцией $z=f(x,y)$. Иначе говоря, это такая поверхность, которую любая вертикаль пересекает только один раз. Не могут моделироваться также вертикальные грани.
+
+Неравномерная сетка представляет собой модель описания поверхности в виде множества отдельных точек, логически не связанных друг с другом. Такие точки могут быть получены, например, при измерении реальной поверхности, а их неравномерное расположение требует применения методов интерполяции для восстановления информации о других точках~\cite{lit9}.
+
+Для поставленной задачи были выбраны аналитический и полигональный методы, поскольку полигональный метод позволяет задавать произвольные объекты, при этом имея меньшую сложность по памяти. С помощью аналитической модели можно без погрешности задать сферу, используемую в курсовой работе.
+
+
 \section{Алгоритмы удаления невидимых линий и поверхностей}
 Все алгоритмы удаления невидимых линий работают либо в пространстве объектов, либо в пространстве изображений. Рассмотрим наиболее известные из них.
 \subsection{Алгоритм Робертса}
@@ -90,6 +106,6 @@
 
 \section*{Вывод}
 
-В данном разделе были рассмотрены основные методы построения реалистичных изображений. Для удаления невидимых ребер, учета отражения света и теней, а также симуляции эффекта глубины поля в данной работе был выбран алгоритм обратной трассировки лучей в силу своей универсальности и реалистичности результата.
+В данном разделе были рассмотрены основные методы построения реалистичных изображений, а также модели представления объектов. Для удаления невидимых ребер, учета отражения света и теней, а также симуляции эффекта глубины поля в данной работе был выбран алгоритм обратной трассировки лучей в силу своей универсальности и реалистичности результата. В качестве реализуемых способов представления поверхностных моделей были выбраны аналитический способ и полигональная сетка.
 
 \clearpage
