--- a/doc/appendixes.tex
+++ b/doc/appendixes.tex
@@ -63,4 +63,4 @@
 \clearpage
 
 \ssr{ПРИЛОЖЕНИЕ Б}
-Презентация к курсовой работе содержит \_\_ слайдов.
+Презентация к курсовой работе содержит 19 слайдов.
