--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -4,9 +4,11 @@
 
 Цель работы -- разработка программного обеспечения (ПО) для визуализации сцен трехмерных объектов, позволяющего изменять параметры объектов.
 
+
 Для достижения поставленной цели необходимо решить следующие задачи:
 \begin{enumerate}
-	\item проанализировать предметную область, рассмотреть известные подходы и алгоритмы;
+	\item формализовать задачу в виде IDEF0 диаграммы;
+	\item проанализировать предметную область, рассмотреть известные подходы, алгоритмы, а также модели представления объектов;
 	\item спроектировать ПО для построения реалистичных сцен;
 	\item реализовать выбранные алгоритмы для построения трехмерной сцены;
 	\item исследовать характеристики разработанного ПО.
