--- a/doc/links.tex
+++ b/doc/links.tex
@@ -1,5 +1,6 @@
 \addcontentsline{toc}{chapter}{СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
 \begin{thebibliography}{}
+	\bibitem{lit9} Основы компьютерной графики. Модели описания поверхностей [Электронный ресурс]. URL: \url{https://it.kgsu.ru/C_GRAPH/oglav3.html} (дата обращения 04.12.24);
 	\bibitem{lit1} Роджерс~Д., Адамс~Дж. Математические основы машинной графики. --- Москва: Мир, 2001. --- 500с.;
 	\bibitem{lit2} Шишкин~Е.~В., Боресков~А.~В. Компьютерная графика. Динамика, реалистичные изображения. --- Москва: ДИАЛОГ-МИФИ, 1996. --- 288с;
 	\bibitem{lit3} Польский~С.~В. Компьютерная графика: учебно-методическое пособие. --- Москва: ГОУ ВПО МГУЛ, 2008. --- 38с.;
@@ -10,6 +11,7 @@
 	\bibitem{lit8} Fast Minimum Storage Ray/Triangle Intersection [Электронный ресурс]. URL: \url{https://web.archive.org/web/20170517125238/http://www.cs.virginia.edu/~gfx/Courses/2003/ImageSynthesis/papers/Acceleration/Fast\%20MinimumStorage\%20RayTriangle\%20Intersection.pdf} (дата обращения 04.12.2024);
 	\bibitem{CSharp} Заметки о выпуске C\# 7.3 [Электронный ресурс]. URL: \url{https://docs.microsoft.com/en-us/visualstudio/releasenotes/vs2017-relnotes-v15.7#csharp} (дата обращения 04.12.2024);
 	\bibitem{VS2022} Microsoft Visual Studio 2022 [Электронный ресурс]. URL: \url{https://visualstudio.microsoft.com/ru/vs/} (дата обращения 04.12.2024);
+	\bibitem{XUnit} Фреймворк модульного тестирования XUnit [Электронный ресурс]. URL: \url{https://xunit.net} (дата обращения 04.12.2024);
 	\bibitem{Anti-aliasing} Сглаживание [Электронный ресурс]. URL: \url{https://www.nvidia.com/content/Control-Panel-Help/vLatest/ru-ru/mergedProjects/nv3dRUS/antialiasing.htm} (дата обращения 04.12.2024);
 	\bibitem{proc} Технические характеристики процессора Intel Core i7-12700KF [Электронный ресурс]. URL: \url{https://www.intel.com/content/www/us/en/products/sku/134595/intel-core-i712700kf-processor-25m-cache-up-to-5-00-ghz/specifications.html} (дата обращения 04.12.2024);
 	\bibitem{win11} Windows 11 Home [Электронный ресурс]. URL: \url{https://www.microsoft.com/ru-ru/software-download/windows11} (дата обращения 04.12.2024);
