--- a/doc/tech_part.tex
+++ b/doc/tech_part.tex
@@ -243,15 +243,141 @@
 	3 & --- & \makecell{Выбор сцены \\<<Сцена с конем и сферой>>;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\конем, кубом и сферой} \\ \hline
 	4 & \makecell{Выбрана и\\визуализирована\\сцена с двумя сферами} & \makecell{Выбор камеры №2\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\двумя сферами и второй\\камерой} \\ \hline
 	5 & \makecell{Выбрана и\\визуализирована\\сцена с двумя сферами} & \makecell{Выбор камеры №3\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\двумя сферами и третьей\\камерой} \\ \hline
-	6 & \makecell{Выбрана и \\визуализирована \\сцена с двумя сферами и \\третьей камерой} & \makecell{Изменение поля зрения\\на 90 градусов\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\двумя сферами и третьей\\камерой с углом\\обзора 90 градусов} \\ \hline
-	7 & \makecell{Выбрана и \\визуализирована \\сцена с конем и сферой\\и третьей камерой} & \makecell{Выбор фигуры коня нажатием\\левой кнопки мыши;\\Изменение цвета коня\\на желтый;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\желтым конем и сферой\\с третьей камерой} \\ \hline
-	8 & \makecell{Выбрана и \\визуализирована \\сцена с конем и сферой\\и третьей камерой} & \makecell{Выбор куба в \\списке объектов;\\Изменение зеркальности\\куба на 95\%;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\конем, зеркальным кубом\\ и сферой с третьей\\камерой} \\ \hline
-	9 & \makecell{Выбрана и \\визуализирована \\сцена с двумя сферами\\и первой камерой} & \makecell{Увеличение интенсивности \\света до 50\%;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\двумя сферами с первой\\камерой и с \\интенсивностью\\ освещения 50\% \\от максимальной} \\ \hline
-	10 & \makecell{Выбрана и \\визуализирована \\сцена с двумя сферами\\и первой камерой} & \makecell{Включение сглаживания;\\Изменение числа лучей на 64;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\двумя сферами с первой\\камерой и с сглаживаем} \\ \hline
-	11 & \makecell{Выбрана и \\визуализирована \\сцена с двумя сферами\\и первой камерой} & \makecell{Включение глубины поля;\\Изменение расстояния до\\фокальной точки на 8;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\двумя сферами с первой\\камерой и с эффектом \\глубины поля} \\ \hline
-	12 & \makecell{Выбрана и \\визуализирована \\сцена с двумя сферами\\и первой камерой} & \makecell{Изменение типа закраски\\на метод Гуро;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\двумя сферами с первой\\камерой с помощью \\закраски Гуро} \\ \hline
+	6 & \makecell{Выбрана и \\визуализирована сцена \\с шахматными фигурами\\и первой камерой} & \makecell{Выбор камеры №2\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\с шахматными фигурами\\и второй камерой} \\ \hline
+	7 & \makecell{Выбрана и \\визуализирована \\сцена с двумя сферами и \\третьей камерой} & \makecell{Изменение поля зрения\\на 90 градусов\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\двумя сферами и третьей\\камерой с углом\\обзора 90 градусов} \\ \hline
+	8 & \makecell{Выбрана и \\визуализирована \\сцена с конем и сферой\\и третьей камерой} & \makecell{Выбор фигуры коня нажатием\\левой кнопки мыши;\\Изменение цвета коня на\\ желтый; Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\желтым конем и сферой\\с третьей камерой} \\ \hline
+	9 & \makecell{Выбрана и \\визуализирована \\сцена с конем и сферой\\и второй камерой} & \makecell{Выбор куба в \\списке объектов;\\Изменение зеркальности\\куба на 95\%;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\конем, зеркальным кубом\\ и сферой со второй\\камерой} \\ \hline
+	10 & \makecell{Выбрана и \\визуализирована \\сцена с двумя сферами\\и первой камерой} & \makecell{Увеличение интенсивности \\света до 80\%;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\двумя сферами с первой\\камерой и с \\интенсивностью\\ освещения 80\% \\от максимальной} \\ \hline
+	11 & \makecell{Выбрана и \\визуализирована \\сцена с двумя сферами\\и второй камерой} & \makecell{Включение сглаживания;\\Изменение числа лучей на 64;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\двумя сферами со второй\\камерой и со сглаживаем} \\ \hline
+	12 & \makecell{Выбрана и \\визуализирована сцена с \\конем, кубом и сферой\\ с первой камерой} & \makecell{Включение глубины поля;\\Изменение расстояния до\\фокальной точки на 4;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\конем, кубом и сферой\\ с первой камерой и с \\эффектом глубины поля} \\ \hline
+	13 & \makecell{Выбрана и \\визуализирована \\сцена с двумя сферами\\и первой камерой} & \makecell{Изменение глянцевости\\поверхностей на 0\% и \\ зеркальности на 0\%;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\двумя сферами с первой\\камерой с матовым\\ эффектом} \\ \hline
+	14 & \makecell{Выбрана и \\визуализирована \\сцена с двумя сферами\\и первой камерой} & \makecell{Изменение глянцевости\\поверхностей на 100\% и\\ зеркальности на 20\%;\\Нажатие кнопки\\<<Визуализировать>>} & \makecell{Визуализация сцены с \\двумя сферами с первой\\камерой с глянцевым\\ эффектом} \\ \hline
 \end{longtable}
 
+На рисунках~\ref{fig:test1}~-~\ref{fig:test14} представлены визуализации тестов из таблицы~\ref{tab:func}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test1}
+	\caption{Визуализация функционального теста №1}
+	\label{fig:test1}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test2}
+	\caption{Визуализация функционального теста №2}
+	\label{fig:test2}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test3}
+	\caption{Визуализация функционального теста №3}
+	\label{fig:test3}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test4}
+	\caption{Визуализация функционального теста №4}
+	\label{fig:test4}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test5}
+	\caption{Визуализация функционального теста №5}
+	\label{fig:test5}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test6}
+	\caption{Визуализация функционального теста №6}
+	\label{fig:test6}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test7}
+	\caption{Визуализация функционального теста №7}
+	\label{fig:test7}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test8}
+	\caption{Визуализация функционального теста №8}
+	\label{fig:test8}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test9}
+	\caption{Визуализация функционального теста №9}
+	\label{fig:test9}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test10}
+	\caption{Визуализация функционального теста №10}
+	\label{fig:test10}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test11}
+	\caption{Визуализация функционального теста №11}
+	\label{fig:test11}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test12}
+	\caption{Визуализация функционального теста №12}
+	\label{fig:test12}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test13}
+	\caption{Визуализация функционального теста №13}
+	\label{fig:test13}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.55\textwidth]{test14}
+	\caption{Визуализация функционального теста №14}
+	\label{fig:test14}
+\end{figure}
+
+\section{Модульное тестирование}
+Модульное тестирование было реализовано с помощью фреймворка XUnit~\cite{XUnit}. В качестве метрики, используемой для оценки полноты тестирования программного обеспечения, было выбрано покрытие строк кода. Реализованный набор модульных тестов имеет покрытие, равное 23\%.
+
+Примеры модульных тестов приведены на листингах~\ref{lst:VAdd}~-~\ref{lst:HSphere}.
+\clearpage
+\begin{center}
+	\begin{lstlisting}[label={lst:VAdd}, captionpos={t}, caption={Пример модульного теста для сложения двух векторов}]
+	[Fact]
+	public void AdditionOperatorTest()
+	{
+		var v1 = new Vector3(1, 2, 3);
+		var v2 = new Vector3(4, 5, 6);
+		var result = v1 + v2;
+		
+		Assert.True(result.X == 5 && result.Y == 7 && result.Z == 9);
+	}
+	\end{lstlisting}
+\end{center}
+
+\begin{center}
+	\begin{lstlisting}[label={lst:HSphere}, captionpos={t}, caption={Пример модульного теста для неуспешного поиска пересечения луча со сферой}]
+	[Fact]
+	public void SphereIntersectRay_MissesSphere()
+	{
+		var sphere = new Sphere(new Vector3(0, 0, -5), 1, System.Drawing.Color.Red, 0);
+		var ray = new Ray(new Vector3(0, 0, 0), new Vector3(1, 0, 0));
+		
+		bool hit = sphere.IntersectRay(ray, out double distance, out Vector3 normal);
+		
+		Assert.False(hit);
+	}
+	\end{lstlisting}
+\end{center}
+
+\clearpage
 \section{Интерфейс программного обеспечения}
 На рисунке~\ref{fig:InterfaceDemoStart} приведена демонстрация интерфейса программы при ее запуске.
 \begin{figure}[H]
@@ -267,7 +393,7 @@
 
 Ниже перечисленных элементов графического интерфейса расположено окно <<Список объектов сцены>>, который заполняется наименованиями объектов сцены при нажатии кнопки <<Визуализировать>>. В данном элементе можно выбирать объекты сцены нажатием левой кнопки мыши на нужную строку для изменения свойств выбранного объекта.
 
-Группа параметров <<Параметры сцены>> позволяет настроить общие для всех объектов параметры. Пользователю предоставлена возможность изменить интенсивность источника света, включить сглаживание (Anti-Aliasing)~\cite{Anti-aliasing} и глубину поля (Depth Of Field), выбрать число лучей для двух описанных эффектов, изменить расстояние от камеры до фокальной точки (расстояние измеряется по вектору направлению взгляда), а также выбрать алгоритм закраски -- по методу Фонга или по методу Гуро.
+Группа параметров <<Параметры сцены>> позволяет настроить общие для всех объектов параметры. Пользователю предоставлена возможность изменить интенсивность источника света, включить сглаживание (Anti-Aliasing)~\cite{Anti-aliasing} и глубину поля, выбрать число лучей для двух описанных эффектов, изменить расстояние от камеры до фокальной точки (расстояние измеряется по вектору направлению взгляда), а также выбрать алгоритм закраски -- по методу Фонга или по методу Гуро.
 
 Группа параметров <<Свойства объектов сцены>> позволяет настроить зеркальность поверхности выбранного объекта и его цвет. Пример выбора объекта сцены и изменения его зеркальности приведен на рисунке~\ref{fig:ChoosingObjectDemo}.
 
@@ -288,6 +414,6 @@
 \end{figure}
 
 \section*{Вывод}
-В данном разделе были выбраны средства реализации, описана структура классов программы, а также приведено описание интерфейса ПО.
+В данном разделе были выбраны средства реализации, описана структура классов программы и ее тестирование, а также приведено описание интерфейса ПО.
 
 \clearpage
