--- a/doc/design_part.tex
+++ b/doc/design_part.tex
@@ -36,7 +36,7 @@
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth]{IDEF0_top}
-	\caption{Верхний уровень декомпозиции задачи}
+	\caption{Верхний уровень A0 декомпозиции задачи}
 	\label{fig:IDEF0_top}
 \end{figure}
 
