--- a/doc/design_part.tex
+++ b/doc/design_part.tex
@@ -7,7 +7,7 @@
 	\item возможность выбора визуализируемой сцены из трех предложенных вариантов: сцена с двумя сферами, сцена с кубом, сферой и фигурой коня, сцена со всеми шахматными фигурами;
 	\item возможность выбора объекта сцены путем нажатия на него мышкой или его выбора в списке объектов;
 	\item возможность изменения цвета и коэффициента отражения выбранного объекта сцены;
-	\item возможность выбора типа закраски объекта: по методу Гуро и по методу Фонга;
+	\item возможность изменения глянцевости/матовости изображения объектов сцены;
 	\item возможность включения режима глубины поля, при этом возможно изменение расстояния от камеры до фокальной точки;
 	\item возможность включения режима сглаживания изображения.
 \end{itemize}
@@ -116,7 +116,7 @@
 Алгоритм представлен на схемах~\ref{fig:CubeIntersection_1}-\ref{fig:CubeIntersection_2}.
 \begin{figure}[H]
 	\centering
-	\includegraphics[height=0.7\textheight]{CubeIntersection_1}
+	\includegraphics[height=0.8\textheight]{CubeIntersection_1}
 	\caption{Схема алгоритма нахождения точки пересечения луча и сферы}
 	\label{fig:CubeIntersection_1}
 \end{figure}
