--- a/doc/tech_part.tex
+++ b/doc/tech_part.tex
@@ -9,9 +9,10 @@
 
 \section{Структура программы}
 На рисунке~\ref{fig:SceneObjects} представлена диаграмма разработанных классов.
+\clearpage
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1\textwidth]{Class_Diagram_UML}
+	\includegraphics[width=\textwidth]{Class_Diagram_UML}
 	\caption{Диаграмма классов объектов сцены}
 	\label{fig:SceneObjects}
 \end{figure}
@@ -44,7 +45,7 @@
 		\item Settings -- класс с настройками для трассировки лучей;
 		\item ColorCalculation -- класс, реализующий логику реализации выбранной модели освещения;
 	\end{itemize}
-	\item RayTracing -- класс, реализующий основную логику приложения.
+	\item RayTracer -- класс, реализующий основную логику приложения.
 \end{enumerate}
 
 \section{Реализация алгоритмов}
